# WebBin

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  enc.py  pyproject.toml  wsgi.py
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 0e69c72a4d3f_add_view_count.py  1f4fe1bd5dc6_convert_binary_to_largebinary.py  1f81ead0fd98_rename_column_secret_data_to_data.py  2bd41d942105_add_expires_at_column.py  3492f71fb181_add_created_at_and_make_expires_after_.py  79662f67dff2_add_nonce_tag_token_salt_columns.py  7bd2692ab6dd_rename_table_secrets_to_pastes.py  804e968bb0fa_use_expires_at_to_track_paste_expiry.py  d0e3f84d90fa_add_is_compressed_column.py  e5b2deffa08c_initial_migration.py  ed4ebf81df7a_rename_paste_id_to_id.py  fd500896ef54_add_title_column.py  fd85dbc3b740_convert_secret_data_column_to_binary.py
src/app/: __init__.py  crypto.py  models.py
src/app/main/: __init__.py  forms.py  views.py
src/app/static/: clipboard.js  dayjs.js  onsubmit.js
src/app/templates/: 404.html  _main.html  ask-password.html  base.html  index.html  reveal-secret.html
src/webbin/: __init__.py  crypto.py  models.py
src/webbin/main/: errors.py  forms.py  views.py
src/webbin/templates/: 500.html  index.html  reveal-secret.html
tests/: conftest.py  test_crypto.py
