[tool.poetry]
name = "WebBin"
version = "0.1.0"
license = "GPL-3.0-or-later"
description = "The Based Pastebin"
authors = ["Arunanshu Biswas <mydellpc07@gmail.com>"]
readme = "README.md"
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
flask = "^2.2.2"
flask-wtf = "^1.0.1"
flask-sqlalchemy = "^3.0.2"
bootstrap-flask = "^2.2.0"
flask-talisman = "^1.0.0"
flask-minify = "^0.41"
flask-migrate = "^4.0.0"
pyflocker = "^0.4.0"
python-dotenv = "^1.0.0"
# sql connectors
psycopg2-binary = { version = "^2.9.5", optional = true }
# web servers
gunicorn = { version = "^20.1.0", optional = true, markers = "sys_platform != 'win32'" }
waitress = { version = "^2.1.2", optional = true }

[tool.poetry.extras]
postgres = ["psycopg2-binary"]
waitress = ["waitress"]
gunicorn = ["gunicorn"]

[tool.poetry.group.dev.dependencies]
flask-shell-ipython = "^0.4.1"

[tool.poetry.group.tests.dependencies]
hypothesis = "^6.58.1"
pytest = "^7.2.0"
pytest-randomly = "^3.12.0"
pytest-xdist = "^3.0.2"
pytest-cov = "^4.0.0"

[tool.pycln]
all = true

[tool.black]
line-length = 79
target-verson = "py38"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 79
profile = "black"
add_imports = ["from __future__ import annotations"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
