[project]
authors = [
    { name = "Arunanshu Biswas", email = "mydellpc07@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.3",
    "flask-wtf>=1.2.1",
    "flask-sqlalchemy>=3.1.1",
    "bootstrap-flask>=2.4.0",
    "flask-talisman>=1.1.0",
    "flask-minify>=0.42",
    "flask-migrate>=4.0.7",
    "pyflocker>=0.4.1",
    "python-dotenv>=1.0.1",
]
name = "WebBin"
version = "0.1.0"
description = "The Based Pastebin"
readme = "README.md"

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.1.18",
]
gunicorn = [
    "gunicorn>=22.0.0",
]
waitress = [
    "waitress>=3.0.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "flask-shell-ipython>=0.5.1",
    "types-flask-migrate>=4.0.0.20240311",
    "mypy>=1.9.0",
    "types-wtforms>=3.1.0.20240311",
    "ruff>=0.3.7",
    "build>=1.2.1",
]
tests = [
    "hypothesis>=6.100.1",
    "pytest>=8.1.1",
    "pytest-randomly>=3.15.0",
    "pytest-xdist>=3.5.0",
    "pytest-cov>=5.0.0",
]

[tool.pdm.scripts]
deploy = "flask deploy"
start = "gunicorn wsgi:app"
start-waitress = "waitress-serve wsgi:app"
start-dev = "flask -A wsgi:app run"

[tool.mypy]
exclude = ["migrations/", "tests/"]
python_version = "3.10"
warn_unused_configs = true
warn_unused_ignores = true

pretty = true
show_error_codes = true

warn_redundant_casts = true
# warn_return_any = true
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.ruff]
output-format = "grouped"
line-length = 79
target-version = "py310"

[tool.ruff.lint]
exclude = ["migrations/*", "tests/*"]
ignore = ["ANN101", "ANN102", "ANN401", "B024"]
select = [
    "ANN",
    "B",
    "E",
    "F",
    "W",
    "I",
    "RET",
    "EM",
    "UP",
    "C90",
    "TCH",
    "SIM",
    "PIE",
    "TID",
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
required-imports = ["from __future__ import annotations"]
